# overwatch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml
src/: app.rs  main.rs
src/middlewares/: auth.rs
src/routes/: get_audio.rs  get_location_search_autocomplete.rs  get_transit_arrival_times.rs  get_transit_routes.rs  get_transit_stop.rs  get_transit_stops_at_location.rs  get_transit_stops_for_route.rs  mod.rs
src/services/: mod.rs
src/services/maps_client/: maps_service.rs  mod.rs
src/services/maps_client/types/: google_autocomplete_response.rs  maps_service_error.rs  mod.rs
src/services/transit_service/: mod.rs  transit_service.rs
src/services/transit_service/types/: mod.rs
src/types/: app_state.rs  lat_long_location.rs  mod.rs  mta_get_location_routes_response.rs  mta_get_routes_response.rs  mta_get_stops_at_location_response.rs  mta_get_stops_for_route_response.rs  response_formats.rs  tomtom_search_response.rs
src/utils/: app_error.rs  mod.rs  mta_client.rs  validated_query.rs
