[package]
name = "overwatch-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
axum-macros = "0.4.1"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
tower = "0.4.13"

[dev-dependencies]
mockall = "0.12.1"
tower = "0.4.13"
