[package]
name = "overwatch-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7.5", features = ["json"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
validator = { version = "0.18.1", features = ["derive"] }
async-trait = "0.1.81"
axum-extra = "0.9.3"
urlencoding = "2.1.3"
tokio-util = "0.7.11"
tower-http = { version = "0.5.2", features = ["cors"] }

[dev-dependencies]
mockito = "1.4.0"
tower = "0.4.13"
tracing-test = "0.2.5"
axum-macros = "0.4.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
